components/pages/slides/styles.module.scss
.slide,
.slide-home {
  width: 100%;
  // height: 100%;
  max-width: 100vw;
  min-height: 100vh;
  overflow: auto;
  position: relative;
  z-index: -2;
}

.slide::before {
  content: "";
  position: absolute;
  width: 10px;
  height: 400px;
  background: linear-gradient(135.11deg, #0a8ede 3.78%, #075bbd 94.58%);
}

.slide-home::before {
  content: "";
  position: absolute;
  width: 10px;
  height: 80px;
  background: linear-gradient(135.11deg, #0a8ede 3.78%, #075bbd 94.58%);
}

.slide-product::before {
  content: "";
  position: absolute;
  width: 10px;
  height: 200px;
  background: linear-gradient(135.11deg, #0a8ede 3.78%, #075bbd 94.58%);
}

.slide-about::before {
  height: 70%;
}

.slide-roof::before {
  content: none;
}

.slide-overview::after,
.slide-roof::after {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  height: 614px;
  background: linear-gradient(180deg, #000000 39.58%, rgba(0, 0, 0, 0) 100%);
  z-index: -1;
}

.slide-overview::after {
  background: linear-gradient(180deg, #000000 39.58%, rgba(0, 0, 0, 0) 100%);
}

.slide-roof::after {
  background: linear-gradient(
    180deg,
    #000000 39.58%,
    rgba(221, 221, 221, 0) 100%
  );
}

.bg-light {
  background-image: linear-gradient(#075bbd1a, #c4c4c400);
}

.dark {
  color: #fff;
  background: #000000;
}

.logo {
  position: absolute;
  width: 190px;
  height: 90px;
  left: 70px;
  top: 37px;

  opacity: 0;
  animation-fill-mode: forwards;
  animation-delay: 0.5s;
}

.title {
  font-weight: bolder;
  font-size: 96px;
  margin: 0;
}

.sub-title {
  font-weight: 400;
  font-size: 24px;
  line-height: 31px;
  margin: 20px 0 0 0;
  color: #c5c5c5;
}

.content {
  margin: 150px 90px 0;
  height: calc(100% - 100px);
}

.home {
  &__logo {
    width: 250px;
    height: 105px;
    margin: 80px 0 0 70px;

    opacity: 0;
    animation-fill-mode: forwards;
    animation-delay: 0.5s;
  }

  &__title {
    margin: 80px 0 0 70px;
    font-weight: bolder;
    font-size: 120px;
    line-height: 100%;
    text-align: left;

    animation-delay: 0.7s;
  }

  &__address {
    margin: 30px 0 0 75px;
    font-style: normal;
    font-weight: bold;
    font-size: 36px;
    line-height: 47px;
    color: #868686;
    min-height: 47px;

    animation-delay: 0.9s;
  }

  &__map-area {
    position: relative;
    width: 50%;
    margin: 60px auto 0;
    animation-delay: 0.9s;
  }

  &__drone {
    position: absolute;
    top: 0;
    right: 0;
    width: 160px;
    height: 120px;

    animation-delay: 1s;
  }
}

.product {
  display: flex;
  flex-wrap: nowrap;
  height: 100%;

  &__logo {
    position: absolute;
    width: 175px;
    height: 75px;
    left: 70px;
    top: 45px;

    opacity: 0;
    animation-fill-mode: forwards;
    animation-delay: 0.5s;
  }

  &__left {
    flex: 0 0 60%;
    padding: 0 5%;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  &__right {
    flex: 0 0 40%;
    text-align: center;
    background: rgba(229, 229, 229, 0.5);
    padding: 0 5%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  &__title {
    font-weight: bolder;
    font-size: 72px;
    line-height: 94px;
    position: relative;
    margin: 20px 0;
    animation-delay: 0.9s;
  }

  &__title-logo {
    position: absolute;
    top: 6px;
    left: 0;
    width: 63px;
    height: 66px;
    animation-delay: 0.8s;
  }

  &__description {
    font-weight: bold;
    font-size: 24px;
    line-height: 31px;
    color: #8b8b8b;
    text-align: left;
    animation-delay: 1.2s;
  }

  &__roof-scheme-area {
    position: relative;
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
    width: 100%;
  }

  &__drone {
    position: absolute;
    top: 0;
    right: 0;
    width: 100px;
    height: 80px;

    animation-delay: 0.8s;
  }

  .list {
    font-weight: bolder;
    font-size: 24px;
    line-height: 31px;
    margin: 50px 0;
    position: relative;
    color: #c5c5c5;
    cursor: pointer;

    &::before {
      content: "";
      position: absolute;
      left: -45px;
      top: 50%;
      transform: translateY(-50%);
      width: 20px;
      height: 20px;
      border-radius: 50%;
      background: #c5c5c5;
    }

    &::after {
      content: "";
      position: absolute;
      left: -36px;
      top: 50%;
      border: 0.5px dashed;
      height: 90px;
      border-color: #c5c5c5;
    }

    &.active {
      font-size: 32px;
      line-height: 42px;
      color: #000000;

      &::before {
        left: -50px;
        background: #000000;
        width: 30px;
        height: 30px;
      }

      &::after {
        top: calc(50% + 15px);
        height: 95px;
      }
    }

    &.last {
      &::after {
        content: none;
      }
    }
  }

  model-viewer {
    width: 500px;
    height: 500px;
    margin: 0 auto;
  }
}

.overview {
  color: #fff;
  z-index: 1;

  &__logo {
    position: absolute;
    width: 155px;
    height: 84px;
    left: 70px;
    top: 37px;

    opacity: 0;
    animation-fill-mode: forwards;
    animation-delay: 0.5s;
  }

  &__title {
    margin: 130px 0 0 83px;
    font-weight: bolder;
    font-size: 96px;
    line-height: 125px;
    text-align: left;

    animation-delay: 0.7s;
  }

  &__address {
    margin: 0 0 0 88px;
    font-weight: 400;
    font-size: 24px;
    line-height: 31px;
    color: #e5e5e5;

    animation-delay: 0.9s;
  }

  &__image {
    position: absolute;
    top: 250px;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: -2;
    width: 100%;
    height: 100%;
  }
}
/* ... */

